# Spiralverse-AetherMoore

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md
examples/: demo_auth.py
spiralverse/: __init__.py
spiralverse/core/: sacred_tongues.py
spiralverse/crypto/: pqc_module.py
src/: __init__.py  aethermoore_geometry.py  lws_core.py  scbe_engine.py  spiralverse_integration.py
tests/: test_scbe_engine.py
