[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spiralverse-aethermoore"
version = "0.1.0"
description = "Quantum-Resistant Cryptographic Framework with Harmonic Scaling Law"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Isaac Davis", email = "issdandavis@github.com"}]
requires-python = ">=3.9"
keywords = ["cryptography", "pqc", "quantum", "kyber", "dilithium", "harmonic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "cryptography>=41.0.0",
    "pycryptodome>=3.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]
pqc = [
    "kyber-py>=0.3.0",
    "pqcrypto>=0.1.3",
]

[project.urls]
Homepage = "https://github.com/issdandavis/Spiralverse-AetherMoore"
Documentation = "https://github.com/issdandavis/Spiralverse-AetherMoore/docs"
Repository = "https://github.com/issdandavis/Spiralverse-AetherMoore"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
